--- a/web_server/html/_config.yml
+++ b/web_server/html/_config.yml
@@ -5,7 +5,7 @@ destination: ../output/html
 
 # Language plugin
 # "english", "german", "russian", "italian", "hebrew"
-languages: ["english", "german", "russian", "italian", "dutch", "chinese", "portuguese", "slovak", "polish", "estonian", "hebrew", "czech", "turkish"]
+languages: ["english", "german", "russian", "italian", "dutch", "chinese", "portuguese", "slovak", "polish", "estonian", "hebrew", "czech", "turkish", "indonesia"]
 
 
 # Jekyll tidy HTML plugin
