Minor translation fixes

--- a/web_server/html/_i18n/russian.yml
+++ b/web_server/html/_i18n/russian.yml
@@ -57,12 +57,12 @@ global:
     translated-by: "Переведено $$"
 
 setup:
-    title: "настроить"
+    title: "Настроить"
     page-1:
         header: "Условия и положения"
         card:
             title: "Добро пожаловать! Wi-PWN"
-            paragraph-1: "Это программное обеспечение предназначено только для пентестирования!"
+            paragraph-1: "Это программное обеспечение предназначено только для пентестинга!"
             paragraph-2: "Wi-PWN может выполнять атаки деавторизации в незащищенных сетях, <i> похож на использование Wifi Глушилка.</i>"
             paragraph-3: "Используйте это программное обеспечение только в тех сетях, на которые вы имеете право использовать его."
             button: "Принимаю"
@@ -79,7 +79,7 @@ setup:
         message-1: "Настройка завершена!"
         message-2: "Подключитесь к новой сети"
 
-    attribution: "Разработано Sam Denty"
+    attribution: "Разработал Sam Denty"
 
 scan:
     title: "Поиск"
@@ -95,25 +95,25 @@ scan:
 users:
     title: "Пользователи"
     card-1:
-        header: "Поиск Wi-Fi пользователей ($$)"
+        header: "Поиск пользователей в Wi-Fi сети ($$)"
         table:
             info: "Инфо о клиенте"
             packets: "Pkts"
     card-2:
         header: "Сохранённые пользователи ($$)"
     card-3:
-        field-1: "MAC Адресс"
+        field-1: "MAC Адрес"
         button-1: "Добавить"
     strings:
         A: "Сохраненный список клиентов поврежден, сбросить его?"
         B: "Очистка списка клиентов ..."
-        C: "Поиск завершён! Повторно подключите и перезагрузите страницу"
+        C: "Поиск завершён! Повторно подключитесь и перезагрузите страницу"
         D: "Поиск пользователей... Ждите ~ $$сек."
 
 attack:
     title: "Атака"
     card-1:
-        header: "Инициировать атаку"
+        header: "Инициализировать атаку"
         table:
             attack: "Атака"
             status: "Статус"
@@ -127,7 +127,7 @@ attack:
         header-2: "Поставщик"
     card-4:
         header: "Добавить SSID"
-        toggle-1: "Генерировать случайно"
+        toggle-1: "Генерировать рандомно"
         field-1: "Число клонов"
         toggle-2: "Защищён"
         button: "Добавить"
@@ -215,7 +215,7 @@ info:
     title: "Информация"
     card-1:
         header: "Создатель Wi-PWN"
-        about: "Wi-PWN был разработан $$Sam Denty$$, от оригинального проекта $$spacehuhn &#128020;$$. Wi-PWN выпускается под $$CC BY-NC 4.0$$ лицензией."
+        about: "Wi-PWN разработал $$Sam Denty$$, от оригинального проекта $$spacehuhn &#128020;$$. Wi-PWN выпускается под $$CC BY-NC 4.0$$ лицензией."
     card-2:
         header: "Wi-PWN"
         table:
@@ -239,7 +239,7 @@ info:
     strings:
         A: "Не удалось загрузить sysinfo.json"
         B: "Обновление OTA"
-        C: "загрузить"
+        C: "Загрузить"
         D: "Другие проекты"
         E: "Сообщить об ошибке"
         F: "Другие проекты"
